[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/new_card_game/TimelineGrid.gd" type="Script" id=1]
[ext_resource path="res://src/new_card_game/TutorialPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/new_card_game/WarriorPlacementGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/new_card_game/FieldPlacementGrid.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/new_card_game/Tutorial.gd" type="Script" id=5]
[ext_resource path="res://src/core/Pile.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/new_card_game/Deck.gd" type="Script" id=7]
[ext_resource path="res://src/new_card_game/Counters.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/new_card_game/Counters.gd" type="Script" id=9]
[ext_resource path="res://src/new_card_game/Player1.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/new_card_game/Player2.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/new_card_game/TutorialTurnQueue.gd" type="Script" id=12]
[ext_resource path="res://src/new_card_game/Hand1.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/new_card_game/ActionsMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/new_card_game/Hand2.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/new_card_game/Discard.gd" type="Script" id=17]
[ext_resource path="res://src/new_card_game/TempPile.gd" type="Script" id=18]
[ext_resource path="res://src/new_card_game/ChallengePanel.tscn" type="PackedScene" id=19]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=20]
[ext_resource path="res://src/new_card_game/TutorialChallengePanel.gd" type="Script" id=21]
[ext_resource path="res://src/new_card_game/TutorialWarriorActionsMenu.gd" type="Script" id=22]
[ext_resource path="res://src/new_card_game/TutorialPlayer2.gd" type="Script" id=23]
[ext_resource path="res://src/new_card_game/TutorialPlayer1.gd" type="Script" id=24]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1039, 189 )
theme = ExtResource( 20 )
script = ExtResource( 5 )

[node name="FieldContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -238.5
margin_right = 312.0
margin_bottom = 238.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="FieldHBox2" type="HBoxContainer" parent="FieldContainer"]
visible = false
margin_top = 157.0
margin_right = 624.0
margin_bottom = 311.0
grow_vertical = 2

[node name="FieldMarginContainer2" type="MarginContainer" parent="FieldContainer/FieldHBox2"]
margin_right = 122.0
margin_bottom = 154.0
rect_min_size = Vector2( 122, 150 )

[node name="FieldGrid2" parent="FieldContainer/FieldHBox2" groups=["field"] instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 126.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="FieldContainer"]
margin_top = 237.0
margin_right = 624.0
margin_bottom = 237.0

[node name="TimelineGrid" parent="FieldContainer" groups=["timeline"] instance=ExtResource( 3 )]
visible = false
margin_top = 242.0
margin_bottom = 392.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
card_size = Vector2( 150, 170 )

[node name="FieldHBox1" type="HBoxContainer" parent="FieldContainer"]
visible = false
margin_top = 317.0
margin_right = 624.0
margin_bottom = 471.0
grow_horizontal = 2
grow_vertical = 2

[node name="FieldMarginContainer1" type="MarginContainer" parent="FieldContainer/FieldHBox1"]
margin_right = 122.0
margin_bottom = 154.0
rect_min_size = Vector2( 122, 150 )

[node name="FieldGrid1" parent="FieldContainer/FieldHBox1" groups=["field"] instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 126.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="FieldContainer"]
margin_top = 240.0
margin_right = 624.0
margin_bottom = 240.0

[node name="Deck" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, 475 )
script = ExtResource( 7 )
placement = 5
show_manipulation_buttons = false
pile_name = "Deck"

[node name="VBoxContainer" parent="Deck/Control/CenterContainer" index="0"]
margin_top = 63.0
margin_right = 68.0
margin_bottom = 95.0

[node name="CardCount" parent="Deck/Control/CenterContainer/VBoxContainer/PanelContainer/CenterContainer" index="0"]
margin_left = 20.0
margin_right = 42.0

[node name="View" parent="Deck/Control/ManipulationButtons" index="0"]
margin_right = 26.0
margin_bottom = 27.0

[node name="ViewSorted" parent="Deck/Control/ManipulationButtons" index="1"]
margin_top = 30.0
margin_right = 26.0
margin_bottom = 57.0

[node name="Shuffle" parent="Deck/Control/ManipulationButtons" index="2"]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 87.0

[node name="CardView" parent="Deck/ViewPopup" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 6.0

[node name="TDeck" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, 475 )
script = ExtResource( 7 )
placement = 5
pile_name = "TanachDeck"

[node name="VBoxContainer" parent="TDeck/Control/CenterContainer" index="0"]
margin_top = 63.0
margin_right = 68.0
margin_bottom = 95.0

[node name="Label" parent="TDeck/Control/CenterContainer/VBoxContainer" index="0"]
margin_right = 68.0

[node name="PanelContainer" parent="TDeck/Control/CenterContainer/VBoxContainer" index="1"]
margin_top = 32.0
margin_right = 68.0
margin_bottom = 61.0

[node name="CenterContainer" parent="TDeck/Control/CenterContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 68.0

[node name="CardCount" parent="TDeck/Control/CenterContainer/VBoxContainer/PanelContainer/CenterContainer" index="0"]
margin_right = 45.0

[node name="View" parent="TDeck/Control/ManipulationButtons" index="0"]
margin_right = 26.0
margin_bottom = 27.0

[node name="ViewSorted" parent="TDeck/Control/ManipulationButtons" index="1"]
margin_top = 30.0
margin_right = 26.0
margin_bottom = 57.0

[node name="Shuffle" parent="TDeck/Control/ManipulationButtons" index="2"]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 87.0

[node name="CardView" parent="TDeck/ViewPopup" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 6.0

[node name="Position" parent="TDeck/Debug" index="0"]
margin_bottom = 24.0

[node name="AreaPos" parent="TDeck/Debug" index="1"]
margin_top = 27.0
margin_bottom = 51.0

[node name="Size" parent="TDeck/Debug" index="2"]
margin_top = 54.0
margin_bottom = 78.0

[node name="Counters" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 25.0
margin_top = 40.0
margin_right = 36.0
margin_bottom = 51.0
script = ExtResource( 9 )

[node name="TurnQueue" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="Player1" parent="TurnQueue" instance=ExtResource( 10 )]
script = ExtResource( 24 )

[node name="Player2" parent="TurnQueue" instance=ExtResource( 11 )]
script = ExtResource( 23 )
test_mode = false

[node name="Discard" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 1124, 475 )
script = ExtResource( 17 )
placement = 4
show_manipulation_buttons = false
pile_name = "Olam Haba"

[node name="Control" parent="Discard" index="0"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" parent="Discard/Control/CenterContainer" index="0"]
margin_top = 47.0
margin_right = 139.0

[node name="Label" parent="Discard/Control/CenterContainer/VBoxContainer" index="0"]
margin_right = 133.0
margin_bottom = 61.0
text = "Olam Haba
"

[node name="PanelContainer" parent="Discard/Control/CenterContainer/VBoxContainer" index="1"]
margin_top = 65.0
margin_right = 133.0
margin_bottom = 94.0

[node name="CenterContainer" parent="Discard/Control/CenterContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 133.0

[node name="CardCount" parent="Discard/Control/CenterContainer/VBoxContainer/PanelContainer/CenterContainer" index="0"]
margin_left = 55.0
margin_right = 77.0

[node name="View" parent="Discard/Control/ManipulationButtons" index="0"]
margin_right = 26.0
margin_bottom = 27.0

[node name="ViewSorted" parent="Discard/Control/ManipulationButtons" index="1"]
margin_top = 30.0
margin_right = 26.0
margin_bottom = 57.0

[node name="Shuffle" parent="Discard/Control/ManipulationButtons" index="2"]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 87.0

[node name="CardView" parent="Discard/ViewPopup" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 6.0

[node name="Debug" parent="Discard" index="4"]
visible = false

[node name="Position" parent="Discard/Debug" index="0"]
margin_bottom = 23.0

[node name="AreaPos" parent="Discard/Debug" index="1"]
margin_top = 26.0
margin_bottom = 49.0

[node name="Size" parent="Discard/Debug" index="2"]
margin_top = 52.0
margin_bottom = 75.0

[node name="TempPile" parent="." instance=ExtResource( 6 )]
position = Vector2( 1124, 475 )
z_index = 10
script = ExtResource( 18 )
placement = 4
overlap_shift_direction = 2
show_manipulation_buttons = false
pile_name = "TempPile"
faceup_cards = true

[node name="Control" parent="TempPile" index="0"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" parent="TempPile/Control/CenterContainer" index="0"]
margin_top = 79.0
margin_right = 0.0
margin_bottom = 79.0

[node name="Label" parent="TempPile/Control/CenterContainer/VBoxContainer" index="0"]
visible = false
margin_right = 139.0
margin_bottom = 60.0
text = "Olam Haba
"

[node name="PanelContainer" parent="TempPile/Control/CenterContainer/VBoxContainer" index="1"]
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="CenterContainer" parent="TempPile/Control/CenterContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 0.0
margin_bottom = 0.0

[node name="CardCount" parent="TempPile/Control/CenterContainer/VBoxContainer/PanelContainer/CenterContainer" index="0"]
visible = false
margin_left = -11.0
margin_top = -15.0
margin_right = 11.0
margin_bottom = 14.0

[node name="View" parent="TempPile/Control/ManipulationButtons" index="0"]
margin_right = 26.0
margin_bottom = 27.0

[node name="ViewSorted" parent="TempPile/Control/ManipulationButtons" index="1"]
margin_top = 30.0
margin_right = 26.0
margin_bottom = 57.0

[node name="Shuffle" parent="TempPile/Control/ManipulationButtons" index="2"]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 87.0

[node name="CardView" parent="TempPile/ViewPopup" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 6.0

[node name="Debug" parent="TempPile" index="4"]
visible = false

[node name="Position" parent="TempPile/Debug" index="0"]
margin_bottom = 23.0

[node name="AreaPos" parent="TempPile/Debug" index="1"]
margin_top = 26.0
margin_bottom = 49.0

[node name="Size" parent="TempPile/Debug" index="2"]
margin_top = 52.0
margin_bottom = 75.0

[node name="TanachIntervalLabel" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = 18.0
margin_right = 24.0
margin_bottom = 42.0

[node name="Hand1" parent="." instance=ExtResource( 14 )]
z_index = 100
show_manipulation_buttons = false
excess_cards = 0

[node name="Hand2" parent="." instance=ExtResource( 16 )]
index_shift_priority = 1
show_manipulation_buttons = false
excess_cards = 0

[node name="SageActionsMenu" parent="." instance=ExtResource( 15 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -407.5
margin_top = -45.0
margin_right = 407.5
margin_bottom = 45.0
focus_mode = 1
script = ExtResource( 22 )

[node name="ChallengePanel" parent="." instance=ExtResource( 19 )]
anchor_top = 0.55
anchor_bottom = 0.55
margin_top = -33.55
margin_right = 181.0
margin_bottom = 33.45
script = ExtResource( 21 )

[node name="ScalingFocusOptions" type="OptionButton" parent="."]
visible = false
margin_left = 19.0
margin_top = 141.0
margin_right = 238.0
margin_bottom = 181.0
disabled = true
toggle_mode = false
text = "Scaling + Viewport Focus"
items = [ "Scaling Focus", null, false, 0, null, "Viewport Focus", null, false, 1, null, "Scaling + Viewport Focus", null, false, 2, null, "Scaling + Info Panels", null, false, 3, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="TutorialPanel" parent="CanvasLayer" instance=ExtResource( 2 )]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.5
margin_top = -125.0
margin_right = 212.5
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Exit Game" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -90.0
margin_right = -30.0
margin_bottom = -25.0
text = "EXIT"
icon_align = 1

[connection signal="gui_input" from="Deck/Control" to="TurnQueue/Player1" method="_on_DeckPanel_gui_input"]
[connection signal="turn_counter_updated" from="TurnQueue" to="." method="_on_TurnQueue_turn_counter_updated"]
[connection signal="action_completed" from="TurnQueue/Player2" to="TurnQueue/Player2" method="_on_Player2_action_completed"]
[connection signal="item_selected" from="ScalingFocusOptions" to="." method="_on_ScalingFocusOptions_item_selected"]
[connection signal="pressed" from="CanvasLayer/TutorialPanel/CenterContainer/VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Exit Game" to="." method="_on_Exit_Game_pressed"]

[editable path="Deck"]
[editable path="TDeck"]
[editable path="Discard"]
[editable path="TempPile"]
[editable path="SageActionsMenu"]
[editable path="CanvasLayer/TutorialPanel"]
